z-index corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -692,7 +692,7 @@ div.flip-container
 	width: 100%;
 	position: fixed;
 	margin: 0;
-	z-index: 3500;
+	z-index: 3;
 	background: transparent;
 }
 
@@ -702,7 +702,7 @@ div.flip-container
 	height: 100%;
 	position: absolute;
 	background: rgb(215,154,57);
-	z-index: 2000;
+	z-index: 3;
 	box-shadow:  2px 0px 10px 1px #000
 }
 
@@ -713,7 +713,7 @@ div.flip-container
 	right: 0;
 	position: absolute;
 	background: rgb(215,154,57);
-	z-index: 2000;
+	z-index: 3;
 	box-shadow: -2px 0px 10px 1px #000;
 }
 
@@ -722,7 +722,6 @@ div.flip-container
 	width: 100%;
 	height: 36px;
 	position: absolute;
-	z-index: 2000;
 	background: rgb(215,154,57);
 	box-shadow:  0px 2px 10px 1px #000;
 	z-index: 3;
